--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -4,44 +4,10 @@
     <meta charset="UTF-8">
     <title>report</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/template.css">
     <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/template.js"></script>
     <style>
-        pre {
-            overflow: auto;
-            height: 400px;
-            word-wrap: break-word;
-            white-space: pre-wrap;
-        }
-        .pass-log {
-            color: lawngreen;
-            font-style: italic;
-        }
-        .crash-log {
-            color: red;
-            font-style: italic;
-        }
-        .serial {
-            width: 3%;
-        }
-        .activity {
-            width: 17%;
-        }
-        .pass-total {
-            width: 5%;
-        }
-        .error-total {
-            width: 5%;
-        }
-        .pass-detail {
-            width: 35%;
-        }
-        .error-detail {
-            width: 35%;
-        }
-        th {
-            word-wrap: break-word;
-            word-break: break-word;
-        }
     </style>
 </head>
 <body>
@@ -66,24 +32,24 @@
                 <tbody>
                     {% for key, value in activities.items() %}
                     <tr>
-                        <th>{{ loop.index }}</th>
-                        <th>{{ key}}</th>
-                        <th>{{ value.pass }}</th>
-                        <th>{{ value.error }}</th>
-                        <th>
+                        <td>{{ loop.index }}</td>
+                        <td>{{ key}}</td>
+                        <td>{{ value.pass }}</td>
+                        <td>{{ value.error }}</td>
+                        <td>
                             {% if value.pass_detail %}
-                            <pre>{% for item in value.pass_detail %}{{ loop.index }}.&nbsp;{{ item.xpath }}&nbsp;<span class="pass-log">{{ item.log}}</span>&nbsp;<a href="javascript:;">Screenshot</a><span style="display: none"><br>before click:&nbsp;<br><img src={{ item.before_click }} width="60%" height="90%"><br>after click:&nbsp;<br><img src={{ item.after_click }} width="60%" height="90%"></span><br>{% endfor %}</pre>
+                            <pre>{% for item in value.pass_detail %}{{ loop.index }}.&nbsp;{{ item.xpath }}&nbsp;<span class="pass-log">{{ item.log}}</span>&nbsp;<a href="javascript:;">Screenshot</a><span style="display: none"><br><span id="{{ item.before_click }}">before click:</span><br><img class="before-screenshot" src="" width="60%" height="90%"><br><span id="{{ item.after_click }}">after click:</span><br><img class="after-screenshot" src="" width="60%" height="90%"></span><br>{% endfor %}</pre>
                             {% else %}
                                 No content
                             {% endif %}
-                        </th>
-                        <th>
+                        </td>
+                        <td>
                             {% if value.error_detail %}
-                            <pre>{% for item in value.error_detail %}{{ loop.index }}.&nbsp;{{ item.xpath }}&nbsp;<span class="crash-log">{{ item.log}}</span>&nbsp;<a href="javascript:;">Screenshot</a><span style="display: none"><br>before click:&nbsp;<br><img src={{ item.before_click }} width="60%" height="90%"><br>after click:&nbsp;<br><img src={{ item.after_click }} width="60%" height="90%"></span>{% endfor %}<br></pre>
+                            <pre>{% for item in value.error_detail %}{{ loop.index }}.&nbsp;{{ item.xpath }}&nbsp;<span class="crash-log">{{ item.log}}</span>&nbsp;<a href="javascript:;">Screenshot</a><span style="display: none"><br><span id="{{ item.before_click }}">before click:</span><br><img class="before-screenshot" src="" width="60%" height="90%"><br><span id="{{ item.after_click }}">after click:</span><br><img class="after-screenshot" src="" width="60%" height="90%"></span>{% endfor %}<br></pre>
                             {% else %}
                                 No content
                             {% endif %}
-                        </th>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -94,18 +60,8 @@
 </div>
 
 <script>
-    $("a").click(function(){
-        const display = $(this).next().css("display")
-        if (display == "inline") {
-            $(this).next().css("display", "none")
-        } else {
-            $(this).next().css("display", "inline")
-        }
-
-    })
-
+    bindShowScreenshot();
 </script>
-
 </body>
 
 </html>
