--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/template.css">
     <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/echarts.min.js"></script>
     <script src="js/template.js"></script>
     <style>
     </style>
 </head>
 <body>
+
 <div class="page-header text-center">
     <h1>Test Report</h1>
 </div>
