--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -17,7 +17,7 @@
     <h1>Test Report</h1>
 </div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <table class="table table-bordered">
