--- a/templates/data_charts_template.html
+++ b/templates/data_charts_template.html
@@ -7,6 +7,7 @@
         #pie {
             height: 400px;
         }
+
         #histogram {
             height: 400px;
         }
@@ -14,23 +15,23 @@
     </style>
 </head>
 <body>
-    <div class="page-header text-center">
-        <h3>Data Charts</h3>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div id="pie">
-            </div>
+<div class="page-header text-center">
+    <h3>Data Charts</h3>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div id="pie">
         </div>
     </div>
+</div>
 
 
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div id="histogram">
-            </div>
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <div id="histogram">
         </div>
     </div>
+</div>
 
 
 <script type="text/javascript">
@@ -38,39 +39,59 @@
 
     var pie = echarts.init($('#pie')[0]);
     var pieOption = {
-         series : [
-        {
-            name: 'Activity Pie',
-            type: 'pie',
-            radius: '55%',
-            data: data['pie']
-        }
-    ]
+        title: {
+            text: 'Activity PieChar',
+            subtext: `Total: ${data['event_total']} events`,
+            left: 'center'
+        },
+        tooltip: {
+            trigger: 'item',
+            formatter: '{a} <br/>{b} : {c} ({d}%)'
+        },
+        legend: {
+            orient: 'vertical',
+            left: 'left',
+        },
+        series: [
+            {
+                name: 'Activity Pie',
+                type: 'pie',
+                radius: '55%',
+                data: data['pie'],
+                label: {
+                    position: 'outer',
+                    alignTo: 'labelLine',
+                    margin: 20
+                },
+            }
+        ]
     };
     pie.setOption(pieOption);
 
     var histogram = echarts.init($('#histogram')[0]);
     var histogramOption = {
         title: {
-                text: 'Activity Histogram'
-            },
-            tooltip: {},
-            legend: {
-                data:['Click Events']
-            },
-            xAxis: {
-                data: data['histogram']['xAxis']
-            },
-            yAxis: {},
-            series: [{
-                name: 'Click Events',
-                type: 'bar',
-                data: data['histogram']['count']
-            }]
+            text: 'Activity Histogram',
+            subtext: `Total: ${data['event_total']} events`
+        },
+        tooltip: {
+            trigger: 'item',
+            formatter: '{a} <br/>{b} : {c}'
+        },
+        legend: {
+            data: ['Click Events']
+        },
+        xAxis: {
+            data: data['histogram']['xAxis']
+        },
+        yAxis: {},
+        series: [{
+            name: 'Click Events',
+            type: 'bar',
+            data: data['histogram']['count']
+        }]
     };
     histogram.setOption(histogramOption);
-
-
 
 
 </script>
